# urban_secure_api

./: APP.html  Cargo.toml  dados.json  mapa.html
imagens/: EXU.txt
src/: main.rs
static/: Index.html  index.html
